# paper_-implementations

./: CMakeLists.txt  README.md
fast_mass_spring/: CMakeLists.txt  Mesh.cpp  Mesh.h  RenderAttach.cpp  RenderAttach.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  main.cpp  shader.hpp
fast_mass_spring/Shaders/: basic.vert  phong.frag
